@@ -2,16 +2,16 @@
 OpenEye-toolkits >= 2020.2.2
 numpy
 jsonschema >= 2.6.0
-rcsb.utils.io >= 1.17
-rcsb.db >= 1.686
+rcsb.utils.io >= 1.28
+rcsb.db >= 1.691
 rcsb.utils.chemref >= 0.79
-rcsb.utils.chem >= 0.73
+rcsb.utils.chem >= 0.75
 rcsb.utils.citation >= 0.16
 rcsb.utils.config >= 0.35
 rcsb.utils.ec >= 0.22
 rcsb.utils.go >= 0.17
 rcsb.utils.seq >= 0.63
-rcsb.utils.struct >= 0.32
+rcsb.utils.struct >= 0.37
 rcsb.utils.taxonomy >= 0.39
-rcsb.utils.dictionary >= 0.64
+rcsb.utils.dictionary >= 0.71
 statistics; python_version < "3.0"
