@@ -77,3 +77,4 @@
 29-Jul-2021 V0.85 Gracefully handle and report missing ligand_comp_id's in LigandNeighborMappingProvider()
  2-Aug-2021 V0.86 Adjust reporting intervals and diagnostic output and update dependencies and configuration
  4-Aug-2021 V0.87 Adjust logging verbosity and dependencies
+22-Sep-2021 V0.88 Add modules EntryInfoProvider and EntryInfoEtlWorkflow and associated tests.
